05-Apr-2016 Issue #197. Added Bam.Core.Module.CloneWithPrivatePatches, which clones an existing module (matching its type), but also copies any private patches applied to that module, and its parent container. This is part of merging source containers. No copying of public patches is performed, as this is dependent upon the context.

05-Apr-2016 Issue #197. Bam.Core.Module.ApplySettingsPatches now honours any PrivateInheritedPatches from a parent container module. This can be the case where source containers are merged.

05-Apr-2016 Fixes #203. Updating version numbers in the make_release script no longer swallows stdout messages if an exception occurs.

05-Apr-2016 Fixes #202. Generating API documentation now updates the version number.

05-Apr-2016 ======== Version 1.0.1 Release ========

05-Apr-2016 Doc packages are now titled 'apidocs' to be clear what they contain.

02-Apr-2016 Fixes #190. Addendum: Xcode projects with no build output (e.g. those that just copy headers) cannot be added as a target dependency (i.e. an order dependency) due to limitations of how target dependencies are managed in Xcode projects.

01-Apr-2016 Fixes #122. Another update to Xcode support for copying files, such as for copying headers for a public API, in which the subdirectory is not needed. (This is now consistent with the VSSolution builder code.)

01-Apr-2016 Fixes #200. C.SettingsBase.SharedInterfaces, which is invoked to determine the intersection of settings interfaces for all source files of a library or application in an IDE project build, was ignoring the precedence (Bam.Core.SettingsPrecendenceAttribute), and could lead to interfaces being converted in an incorrect order, resulting in compilation failures. Such an example is for Clang, that has the AllWarnings property, that must be applied before any warning suppression, which is in another interface.
