@@ -176,6 +176,22 @@ namespace C
             this.UsePublicPatches(dependent);
         }
 
+        /// <summary>
+        /// Extend a container of C object files with another, potentially from another module. Note that module types must match.
+        /// Private patches are inherited.
+        /// Public patches are both used internally, and also forwarded onto any callers of this module.
+        /// </summary>
+        /// <typeparam name="DependentModule">Container module type to embed into the specified container.</typeparam>
+        /// <param name="affectedSource">Container to be extended.</param>
+        public void
+        ExtendSourcePublicly<DependentModule>(
+            CObjectFileCollection affectedSource) where DependentModule : CObjectFileCollection, new()
+        {
+            var dependent = Bam.Core.Graph.Instance.FindReferencedModule<DependentModule>();
+            affectedSource.ExtendWith(dependent);
+            this.UsePublicPatches(dependent);
+        }
+
         protected sealed override void
         ExecuteInternal(
             ExecutionContext context)
